source/_base.scss
/* ... */
div#progressIndicator,
div.NERPageMarker {
    width: auto;
    height: auto;
    border: 0;
    border-radius: 0
}

span.RESThrobber,
span.RESThrobber:after,
span.RESThrobber:before {
    box-shadow: none
}

.footer-parent {
    position: relative;
    padding: 0;
    background: url(%%sidebar%%) fixed bottom/auto auto, linear-gradient(45deg, rgba(39, 161, 227, .65), rgba(231, 35, 42, .65)), url(%%header-ex%%) fixed center/cover;
    background-size: cover;
    text-shadow: 1px 1px 1px black, 0px 0px 2px black;
}

.footer {
    display: block;
    margin: 0;
    width: 100%;
    max-width: none;
    border: 0;
    border-radius: 0;
    padding: 720px 0 50px 0;
    text-align: center
}

.footer .col {
    flex: none;
    border: 0;
    padding: 0 50px
}

.flat-vert.title {
    text-transform: uppercase;
    font-size: 15px;
    font-weight: 700;
    color: #fff
}

.footer .col .flat-vert.title:before {
    display: inline-block;
    vertical-align: middle;
    margin-left: -30px;
    margin-right: 10px;
    width: 20px;
    height: 20px;
    background: url(%%spritesheet%%) 0/120px 290px;
    content: ""
}

.footer .col:nth-of-type(1) .flat-vert.title:before {
    background-position: -56px -168px
}

.footer .col:nth-of-type(2) .flat-vert.title:before {
    background-position: -84px -168px
}

.footer .col:nth-of-type(3) .flat-vert.title:before {
    background-position: 0 -196px
}

.footer .col:nth-of-type(4) .flat-vert.title:before {
    background-position: -28px -196px
}

.footer .col li {
    margin-bottom: 10px
}

.footer .col a,
.footer-parent .bottommenu,
.footer-parent .bottommenu a {
    color: #fff
}

.footer-parent .bottommenu:nth-of-type(1) {
    padding: 60px 0 20px
}

.footer-parent .bottommenu:nth-of-type(2) {
    padding-bottom: 60px
}

.footer-parent~.debuginfo {
    position: relative;
    margin-top: -25px;
    color: #fff
}

.linkinfo {
    border: none;
    background: 0 0;
    padding: 7px;
    text-align: center;
}

.panestack-title {
    margin-right: 320px;
    border: 0;
    border-top: 1px solid rgba(144, 144, 144, .25);
    padding: 10px 0
}

div.usertext-edit.md-container {
    width: 503px!important
}

a.edit-btn {
    vertical-align: bottom
}

.content button.RESBigEditorPop {
    margin: 5px 0 0 0;
    border: 1px solid rgba(144, 144, 144, .25);
    border-radius: 0 5px 5px 0;
    border-left: none;
    padding: 0 10px;
    background-position: 10px 50%;
    color: #4d5968;
}

#shortlink-text {
    padding-left: 5px;
    border: 0;
    border-radius: 0
}

.usertext .help-toggle {
    margin-left: 0
}

.usertext a.reddiquette {
    border-radius: 5px 0 0 5px
}

.usertext .help-toggle .active {
    border-radius: 0 !important
}

.res .usertext .help-toggle .active {
    border-radius: 0px 5px 5px 0px;
    border-left: none;
}

.new-comment .usertext-body {
    border: 0;
    background: rgba(144, 144, 144, .075)
}

.formtabs-content,
.gold-accent,
.wiki-page .pageactions {
    border: 0
}

#subreddit_stylesheet>.sheets:before,
.linefield,
.roundfield,
.wiki-page .wiki-page-content .wiki>.toc>ul {
    border: 1px solid rgba(144, 144, 144, .25);
    border-radius: 5px
}

.search-page button.search-submit-button {
    height: 40px;
    border-radius: 5px
}

.submit-page .submit.content .spacer {
    margin-bottom: 10px
}

.image-upload span,
.submit-page ul.tabmenu.formtab {
    padding: 0
}

.submit-page .tabmenu.formtab li {
    margin-right: 10px
}

.roundfield input[type=text],
.roundfield input[type=url],
.roundfield textarea {
    width: 500px
}

.content.submit .info-notice {
    width: 520px;
    border: 0
}

form .spacer+.spacer {
    margin: 10px 0
}

.linefield,
.roundfield {
    width: 520px;
    background: 0 0
}

.linefield div.usertext-edit.md-container {
    width: 494px!important
}

div#RESStyleSheetTipPane {
    width: calc(100% - 322px);
    border-color: rgba(144, 144, 144, .25);
    border-radius: 5px
}

.sheets {
    margin-right: 322px
}

.sheets .buttons,
.sheets .col>div {
    margin: 0
}

ul#image-preview-list.image-list {
    display: block;
    margin: 0 322px 0 0
}

ul#image-preview-list li {
    display: inline-block;
    float: none;
    width: 50%;
    height: auto
}

.flat-list li.selected a {
    color: #e286a9
}

.message .subject .correspondent,
.tabmenu li.selected a,
.tabpane-content,
div#RESStyleSheetTipPane-header,
div.RESDialogSmall {
    border: 0
}

.flair-jump button {
    vertical-align: top;
    margin-left: 10px
}

.RESDialogSmall.livePreview {
    margin-top: 10px
}

div#BigEditor,
div#RESConsoleContainer,
div#RESNotifications,
div#RESShortcutsAddFormContainer,
div#editShortcutDialog,
div#modalOverlay,
div.guider {
    z-index: 2147483647!important
}

div.guider {
    box-shadow: none;
    border: 2px solid rgba(144, 144, 144, .25)
}

.side:before {
    display: block;
    margin: 10px 0;
    height: 435px;
    border-radius: 5px;
    background: url(%%sidebarimage%%);
    background-size: cover;
    content: ""
}

.link .tagline .flair,
.side .titlebox .word,
.sidecontentbox .flair {
    display: none
}

.side .subscribers {
    font-size: 14px;
    display: block;
    margin: 5px 0
}

.side .users-online {
    font-size: 14px;
    margin: 0 0 10px
}

.side .subscribers .number:after {
    content: " policy advisors to Governor Polis"
}

.side .users-online .number:after {
    content: " online now"
}

body.show-controversial .comment.controversial>.entry .score:after {
    top: 0;
    content: " Hot Take"
}

.arrow.up,
.arrow.upmod {
    background-image: url(%%up%%);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 0 0
}

.arrow.upmod {
    background-image: url(%%upmod%%)
}

p.tagline {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    align-content: center
}

.comment>.entry>.tagline {
    min-height: 37px
}

.tagline .score {
    margin-right: 5px

}
/* ... */

